task1/test_results_defects/infer_test/lock_never_unlock/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/lock_never_unlock.c:228: error: Dead Store
  The value written to &ip (type long) is never used.
  226.    pthread_mutex_lock( &lock_never_unlock_004_glb_mutex_2 );
  227.    ip = (long)input;
  228.    ip = ip *20;
          ^
  229. 
  230. #if defined PRINT_DEBUG

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/lock_never_unlock.c:325: error: Dead Store
  The value written to &ip (type long) is never used.
  323.    pthread_mutex_lock( &lock_never_unlock_006_glb_mutex_2 );
  324.    ip = (long)input;
  325.    ip = ip *20;
          ^
  326. 
  327. #if defined PRINT_DEBUG

Found 2 issues
  Issue Type(ISSUED_TYPE_ID): #
      Dead Store(DEAD_STORE): 2
